--- a/development/scss/module/_voice.scss
+++ b/development/scss/module/_voice.scss
@@ -38,3 +38,16 @@
 	}
 	margin: 60px 0 135px;
 }
+
+#voice {
+	position: relative;
+}
+
+#voice::before {
+	content: url(../../../public/assets/img/bg/bg7.png);
+	@include z-index(bg);
+	left: -700px;
+	position: absolute;
+	top: 1700px;
+	z-index: 100;
+}
