--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1378,7 +1378,8 @@ body.is_scrollRock {
 }
 
 .tab_menu_box {
-  top: 0;
+  position: absolute;
+  top: 100px;
   width: 100%;
 }
 
@@ -1592,7 +1593,9 @@ body.is_scrollRock {
 
 .tab_menu_how_container {
   display: flex;
+  height: 1000px;
   padding-top: 50px;
+  position: relative;
 }
 
 @media screen and (max-width: 600px) {
@@ -1740,13 +1743,13 @@ body.is_scrollRock {
   margin: 307px auto 0;
   position: relative;
   text-align: center;
-  width: 337px;
+  width: 256px;
 }
 
 @media screen and (max-width: 600px) {
   .el_influence_ttl {
     margin: 140px auto 0;
-    width: 280px;
+    width: 188px;
   }
 }
 
