鼻炎にお困りの方、タイトル修正

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1384,8 +1384,8 @@ body.is_scrollRock {
 }
 
 .tab_ttl {
-  font-size: 1.625rem;
-  text-align: center;
+  margin: 0 auto;
+  width: 240px;
 }
 
 .tab_btn_img {
