--- a/development/scss/module/_tab.scss
+++ b/development/scss/module/_tab.scss
@@ -37,26 +37,26 @@
 }
 
 .distress_wrap {
-	background-color: #fff;
+	// background-color: #fff;
 	position: relative;
 }
 
-.distress_wrap::before {
-	background-color: #f7f7f7;
-	content: "";
-	display: block;
-	height: 70%;
-	@include z-index(bg);
-	@include maxmq(sp) {
-		height: 100%;
-		left: -30px;
-		top: 0;
-	}
-	margin: 0 calc(50% - 50vw);
-	position: absolute;
-	top: 200px;
-	width: 100vw;
-}
+// .distress_wrap::before {
+// 	background-color: #f7f7f7;
+// 	content: "";
+// 	display: block;
+// 	height: 70%;
+// 	@include z-index(bg);
+// 	@include maxmq(sp) {
+// 		height: 100%;
+// 		left: -30px;
+// 		top: 0;
+// 	}
+// 	margin: 0 calc(50% - 50vw);
+// 	position: absolute;
+// 	top: 200px;
+// 	width: 100vw;
+// }
 
 .tab_distress_ttl {
 	// font-size: rem(40);
@@ -145,6 +145,7 @@
 	background-color: #fff;
 }
 .tab_menu_container {
+	background-color: #fff;
 	display: flex;
 	height: 1000px;
 	@include maxmq(pc) {
