--- a/development/scss/module/_question.scss
+++ b/development/scss/module/_question.scss
@@ -104,13 +104,13 @@
 		margin-bottom: 65px;
 	}
 	margin-bottom: 140px;
-	position: relative;
+	// position: relative;
 }
 
-#question::after {
-	content: url(../../../public/assets/img/bg/bg8.png);
-	@include z-index(bg);
-	left: -700px;
-	position: absolute;
-	top: 800px;
-}
+// #question::after {
+// 	content: url(../../../public/assets/img/bg/bg8.png);
+// 	@include z-index(bg);
+// 	left: -700px;
+// 	position: absolute;
+// 	top: 800px;
+// }
