--- a/development/scss/layout/_layout.scss
+++ b/development/scss/layout/_layout.scss
@@ -135,24 +135,24 @@
 		padding: 80px 0;
 	}
 	padding: 140px 0;
-	position: relative;
+	// position: relative;
 }
 
 // 背景
-.ly_top::after {
-	content: url(../../../public/assets/img/bg/bg1.png);
-	@include z-index(bg);
-	position: absolute;
-	right: -500px;
-	top: 100px;
-}
-.ly_top::before {
-	content: url(../../../public/assets/img/bg/bg2.png);
-	@include z-index(bg);
-	left: -500px;
-	position: absolute;
-	top: 1000px;
-}
+// .ly_top::after {
+// 	content: url(../../../public/assets/img/bg/bg1.png);
+// 	@include z-index(bg);
+// 	position: absolute;
+// 	right: -500px;
+// 	top: 100px;
+// }
+// .ly_top::before {
+// 	content: url(../../../public/assets/img/bg/bg2.png);
+// 	@include z-index(bg);
+// 	left: -500px;
+// 	position: absolute;
+// 	top: 1000px;
+// }
 
 @include maxmq(tab) {
 	.ly_top::after {
@@ -176,28 +176,23 @@
 .ly_cmponent_wrapper {
 	display: flex;
 	flex-wrap: wrap;
-}
-// 背景
-.ly_cmponent_wrapper {
-	display: flex;
-	flex-wrap: wrap;
-	position: relative;
+	// position: relative;
 }
 
-.ly_cmponent_wrapper::before {
-	content: url(../../../public/assets/img/bg/bg3.png);
-	@include z-index(bg);
-	left: -500px;
-	position: absolute;
-	top: -1200px;
-}
-.ly_cmponent_wrapper::after {
-	content: url(../../../public/assets/img/bg/bg4.png);
-	@include z-index(bg);
-	position: absolute;
-	right: -700px;
-	top: -500px;
-}
+// .ly_cmponent_wrapper::before {
+// 	content: url(../../../public/assets/img/bg/bg3.png);
+// 	@include z-index(bg);
+// 	left: -500px;
+// 	position: absolute;
+// 	top: -1200px;
+// }
+// .ly_cmponent_wrapper::after {
+// 	content: url(../../../public/assets/img/bg/bg4.png);
+// 	@include z-index(bg);
+// 	position: absolute;
+// 	right: -700px;
+// 	top: -500px;
+// }
 
 .ly_cmponent_block {
 	width: 45%;
