--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2323,6 +2323,9 @@ body.is_scrollRock {
 }
 
 .bl_voice_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin: 60px 0 135px;
 }
 
@@ -2330,6 +2333,14 @@ body.is_scrollRock {
   .bl_voice_container {
     margin: 34px 0 64px;
   }
+}
+
+.el_voice_item {
+  flex-basis: 48%;
+}
+
+.el_voice_item:nth-of-type(3), .el_voice_item:nth-of-type(4) {
+  margin-top: 40px;
 }
 
 .bl_story {
