--- a/development/scss/module/_tab.scss
+++ b/development/scss/module/_tab.scss
@@ -457,12 +457,17 @@
 // 	color: $fontcolor_accent;
 // }
 
+.tab_menuhow_box {
+	width: 100%;
+}
 .tab_menuhow_inner {
+	margin: 0 auto;
 	width: 100%;
 }
 .tab_menuhow_flex {
 	display: flex;
 	justify-content: space-between;
+	width: 100%;
 }
 
 .tab_menuhow_flexItem {
