--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1661,13 +1661,19 @@ body.is_scrollRock {
   width: 0;
 }
 
+.tab_menuhow_box {
+  width: 100%;
+}
+
 .tab_menuhow_inner {
+  margin: 0 auto;
   width: 100%;
 }
 
 .tab_menuhow_flex {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .tab_menuhow_flexItem {
