--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,7 +43,7 @@ img {
 .ly_main {
   margin: 0 auto;
   max-width: 1160px;
-  padding: 150px 30px 30px 0;
+  padding: 150px 30px 30px 30px;
 }
 
 @media screen and (max-width: 600px) {
