--- a/development/scss/layout/_layout.scss
+++ b/development/scss/layout/_layout.scss
@@ -15,20 +15,20 @@
 	@include maxmq(sp) {
 		padding: 20px 20px 0 20px;
 	}
-	margin: 0 calc(50% - 50vw);
+	// margin: 0 calc(50% - 50vw);
 	padding: 50px 50px 0 50px;
-	position: relative;
-	width: 100vw;
+	// position: relative;
+	width: 100%;
 }
 
 .ly_fvBg {
-	align-items: center;
-	display: flex;
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
+	// align-items: center;
+	// display: flex;
+	// height: 100%;
+	// left: 0;
+	// position: absolute;
+	// top: 0;
+	// width: 100%;
 }
 
 .ly_logo {
